2006-06-01  Behdad Esfahbod  <behdad@gnome.org>

	* glib/gkeyfile.c (g_key_file_to_data),
	(g_key_file_parse_value_as_comment),
	(g_key_file_parse_comment_as_value):
	* glib/gscanner.c (g_scanner_get_token_ll): Cleanup. Use return
	value of g_string_free(...). (#343548, Chris Wilson)

2006-05-28  Matthias Clasen  <mclasen@redhat.com>

	* glib/gmarkup.c (g_markup_parse_context_parse): 
	Don't use g_str_has_{prefix,suffix} here.

2006-05-28  Matthias Clasen  <mclasen@redhat.com>

	* glib/gmarkup.h: Add a GMarkupParseFlags flag for
	treating CDATA as text. 

	* glib/gmarkup.c (g_markup_parse_context_parse): 
	Implement it here.

2006-05-28  Matthias Clasen  <mclasen@redhat.com>

	* tests/markups/expected-*: Output that test-markup
	is expected to produce when run on the valid gmarkup 
	examples.

	* tests/markup-test.c: Only dump the results of the
	first, unchunked parse, to compare it against the expected
	output. 

	* tests/run-markup-tests.sh: For valid examples, compare
	the output of test-markup against the corresponding
	expected-<n> file.
	
2006-05-24  Matthias Clasen  <mclasen@redhat.com>

	* configure.in: Don't compile timeloop on Minix. 
	(Leonard den Ottolander)

2006-05-22  Sebastian Wilhelmi  <wilhelmi@google.com>

	* glib/gthread.c (g_thread_init_glib): Run _g_atomic_thread_init
	as the first of the full fledged initializers to allow the later
	to potentially use atomic ints (which they currently do
	not). (#342563, Peter Kjellerstedt)

2006-05-16  Matthias Clasen  <mclasen@redhat.com>

	* tests/Makefile.am: 
	* tests/strtoll-test.c: Add tests for g_ascii_strtoll()
	and g_ascii_strtoull().

	* glib/glib.symbols:
	* glib/gstrfuncs.h: 
	* glib/gstrfuncs.c (g_ascii_strtoll): New function to
	parse signed 64bit integers like strtoll does.  

	* glib/goption.c (parse_int64): Use g_ascii_strtoll(),
	since strtoll() is C99 and not available on some
	systems.  (#341826, Kazuki Iwamoto)

2006-05-15  Matthias Clasen  <mclasen@redhat.com>
	